--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <button type="button" class="decimal" value=".">.</button>
             <button type="button" class="all-clear" value="all-clear">AC</button>
             <button type="button" class="equal-sign" value="=">=</button>
+            <button type="button" class="delete-sign" value="delete-sign">DEL</button>
 
         </div>
     </div>
