--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <input type="text" class="calculator-screen" id="screen" value="0" />
         <div class="calculator-keys">
 
-            <button type="button" class="operator" value="+">+</button>
-            <button type="button" class="operator" value="-">-</button>
+            <button type="button" class="operator" value="+">&plus;</button>
+            <button type="button" class="operator" value="-">&minus;</button>
             <button type="button" class="operator" value="*">&times;</button>
             <button type="button" class="operator" value="/">&divide;</button>
             
@@ -34,7 +34,6 @@
             <button type="button" value="1">1</button>
             <button type="button" value="2">2</button>
             <button type="button" value="3">3</button>
-            <div></div>
 
             <button type="button" value="0">0</button>
             <button type="button" class="decimal" value=".">.</button>
