--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         	<button title="Logarit" class="function" value="log(">Log</button>
         	<button title="Logarit of e" class="function" value="ln(">Ln</button>
         	<button title="Square Root - Căn bậc 2" class="function" value="&radic;(">&radic;</button>
-        	<button title="Open my facebook"><i class="fab fa-facebook"></i></button>
-        	<button title="Open my github"><i class="fab fa-github"></i></button>
+        	<button title="Open my facebook" onclick="window.open('https://www.facebook.com/profile.php?id=100004848287494', null)"><i class="fab fa-facebook"></i></button>
+        	<button title="Open my github" onclick="window.open('https://github.com/HoangTran0410', null)"><i class="fab fa-github"></i></button>
 
         	<button title="Sin (in radian)" class="function" value="sin(">Sin</button>
         	<button title="Cos (in radian)" class="function" value="cos(">Cos</button>
