--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="calculator">
-        <input type="text" class="calculator-screen" id="screen" value="0" />
+        <input type="text" class="calculator-screen" id="screen"/>
         <div class="calculator-keys">
 
         	<button title="Logarit" class="function" value="log(">Log</button>
